// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AudioRecorder > does not render recording preview if paused 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-playback"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-playback-button"
        data-testid="audio-recording-preview-toggle-play-btn"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--play-fill"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 8C15.0004 8.16977 14.9569 8.33675 14.8736 8.48471C14.7904 8.63267 14.6703 8.75658 14.525 8.84437L5.52 14.3531C5.36818 14.4461 5.19429 14.4968 5.0163 14.5001C4.83831 14.5034 4.66266 14.4592 4.5075 14.3719C4.35382 14.2859 4.2258 14.1606 4.1366 14.0088C4.04741 13.857 4.00026 13.6842 4 13.5081V2.49187C4.00026 2.3158 4.04741 2.14298 4.1366 1.99117C4.2258 1.83936 4.35382 1.71405 4.5075 1.62812C4.66266 1.54084 4.83831 1.49656 5.0163 1.49986C5.19429 1.50315 5.36818 1.55391 5.52 1.64687L14.525 7.15562C14.6703 7.24342 14.7904 7.36732 14.8736 7.51529C14.9569 7.66325 15.0004 7.83023 15 8Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="str-chat__duration-display str-chat__recording-timer"
      >
        <span
          class="str-chat__duration-display__duration"
        >
          00:44
        </span>
      </div>
      <div
        class="str-chat__wave-progress-bar__track-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
          data-testid="wave-progress-bar-track"
          role="progressbar"
          style="--str-chat__voice-recording-amplitude-bar-gap-width: 1px;"
        >
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 31.399506330490112%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 24.018539488315582%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.365363776683807%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 59.02017951011658%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 26.63217782974243%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.37155795097351%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 82.78987407684326%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 15.16059935092926%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 47.57987558841705%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.29274868965149%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 55.40405511856079%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 85.32787561416626%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 57.56412744522095%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 83.30334424972534%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 75.42996406555176%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 46.48399353027344%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.82987952232361%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.917882204055786%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 71.56173586845398%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 7.107513397932053%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.29901123046875%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.445610344409943%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 95.34039497375488%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 48.61070513725281%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.09651231765747%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 8.803673088550568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 49.2523193359375%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 3.940269351005554%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.68490314483643%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.697471916675568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.977691546082497%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 5.717025697231293%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.073379561305046%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.73514586687088%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 94.67474222183228%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 54.55475449562073%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.71653747558594%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 61.83612942695618%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.5593957901001%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 89.80446457862854%;"
          />
          <div
            class="str-chat__wave-progress-bar__progress-indicator"
            data-testid="wave-progress-bar-progress-indicator"
            style="left: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.25 12.75H11.75V4.25H4.25V12.75ZM5.75 10.5V6.5C5.75 6.08579 6.08579 5.75 6.5 5.75C6.91421 5.75 7.25 6.08579 7.25 6.5V10.5C7.25 10.9142 6.91421 11.25 6.5 11.25C6.08579 11.25 5.75 10.9142 5.75 10.5ZM8.75 10.5V6.5C8.75 6.08579 9.08579 5.75 9.5 5.75C9.91421 5.75 10.25 6.08579 10.25 6.5V10.5C10.25 10.9142 9.91421 11.25 9.5 11.25C9.08579 11.25 8.75 10.9142 8.75 10.5ZM9.75 2.5C9.75 2.4337 9.72364 2.37013 9.67676 2.32324C9.62987 2.27636 9.5663 2.25 9.5 2.25H6.5C6.4337 2.25 6.37013 2.27636 6.32324 2.32324C6.27636 2.37013 6.25 2.4337 6.25 2.5V2.75H9.75V2.5ZM11.25 2.75H13.5C13.9142 2.75 14.25 3.08579 14.25 3.5C14.25 3.91421 13.9142 4.25 13.5 4.25H13.25V13C13.25 13.3315 13.1182 13.6494 12.8838 13.8838C12.6494 14.1182 12.3315 14.25 12 14.25H4C3.66848 14.25 3.35063 14.1182 3.11621 13.8838C2.88179 13.6494 2.75 13.3315 2.75 13V4.25H2.5C2.08579 4.25 1.75 3.91421 1.75 3.5C1.75 3.08579 2.08579 2.75 2.5 2.75H4.75V2.5C4.75 2.03587 4.93451 1.59088 5.2627 1.2627C5.59088 0.934507 6.03587 0.75 6.5 0.75H9.5C9.96413 0.75 10.4091 0.934507 10.7373 1.2627C11.0655 1.59088 11.25 2.03587 11.25 2.5V2.75Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 15V13.1953C6.13495 13.0344 5.09411 12.5179 4.28809 11.7119C3.30352 10.7273 2.75 9.39239 2.75 8C2.75 7.58579 3.08579 7.25 3.5 7.25C3.91421 7.25 4.25 7.58579 4.25 8C4.25 8.99456 4.64537 9.94811 5.34863 10.6514C6.05189 11.3546 7.00544 11.75 8 11.75C8.99456 11.75 9.94811 11.3546 10.6514 10.6514C11.3546 9.9481 11.75 8.99456 11.75 8C11.75 7.58579 12.0858 7.25 12.5 7.25C12.9142 7.25 13.25 7.58579 13.25 8C13.25 9.39239 12.6965 10.7273 11.7119 11.7119C10.9059 12.5179 9.86505 13.0344 8.75 13.1953V15C8.75 15.4142 8.41421 15.75 8 15.75C7.58579 15.75 7.25 15.4142 7.25 15ZM9.75 4C9.75 3.0335 8.9665 2.25 8 2.25C7.0335 2.25 6.25 3.0335 6.25 4V8C6.25 8.9665 7.0335 9.75 8 9.75C8.9665 9.75 9.75 8.9665 9.75 8V4ZM11.25 8C11.25 9.79493 9.79493 11.25 8 11.25C6.20507 11.25 4.75 9.79493 4.75 8V4C4.75 2.20507 6.20507 0.75 8 0.75C9.79493 0.75 11.25 2.20507 11.25 4V8Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > does not render recording preview if recording 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-preview"
    >
      <svg
        class="str-chat__icon str-chat__icon--voice"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.25 15V13.1953C6.13495 13.0344 5.09411 12.5179 4.28809 11.7119C3.30352 10.7273 2.75 9.39239 2.75 8C2.75 7.58579 3.08579 7.25 3.5 7.25C3.91421 7.25 4.25 7.58579 4.25 8C4.25 8.99456 4.64537 9.94811 5.34863 10.6514C6.05189 11.3546 7.00544 11.75 8 11.75C8.99456 11.75 9.94811 11.3546 10.6514 10.6514C11.3546 9.9481 11.75 8.99456 11.75 8C11.75 7.58579 12.0858 7.25 12.5 7.25C12.9142 7.25 13.25 7.58579 13.25 8C13.25 9.39239 12.6965 10.7273 11.7119 11.7119C10.9059 12.5179 9.86505 13.0344 8.75 13.1953V15C8.75 15.4142 8.41421 15.75 8 15.75C7.58579 15.75 7.25 15.4142 7.25 15ZM9.75 4C9.75 3.0335 8.9665 2.25 8 2.25C7.0335 2.25 6.25 3.0335 6.25 4V8C6.25 8.9665 7.0335 9.75 8 9.75C8.9665 9.75 9.75 8.9665 9.75 8V4ZM11.25 8C11.25 9.79493 9.79493 11.25 8 11.25C6.20507 11.25 4.75 9.79493 4.75 8V4C4.75 2.20507 6.20507 0.75 8 0.75C9.79493 0.75 11.25 2.20507 11.25 4V8Z"
        />
      </svg>
      <div
        class="str-chat__recording-timer"
      >
        00:00
      </div>
      <div
        class="str-chat__waveform-box-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
        />
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--pause-fill"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.5 3V13C13.5 13.2652 13.3946 13.5196 13.2071 13.7071C13.0196 13.8946 12.7652 14 12.5 14H10C9.73478 14 9.48043 13.8946 9.29289 13.7071C9.10536 13.5196 9 13.2652 9 13V3C9 2.73478 9.10536 2.48043 9.29289 2.29289C9.48043 2.10536 9.73478 2 10 2H12.5C12.7652 2 13.0196 2.10536 13.2071 2.29289C13.3946 2.48043 13.5 2.73478 13.5 3ZM6 2H3.5C3.23478 2 2.98043 2.10536 2.79289 2.29289C2.60536 2.48043 2.5 2.73478 2.5 3V13C2.5 13.2652 2.60536 13.5196 2.79289 13.7071C2.98043 13.8946 3.23478 14 3.5 14H6C6.26522 14 6.51957 13.8946 6.70711 13.7071C6.89464 13.5196 7 13.2652 7 13V3C7 2.73478 6.89464 2.48043 6.70711 2.29289C6.51957 2.10536 6.26522 2 6 2Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording in progress UI 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-preview"
    >
      <svg
        class="str-chat__icon str-chat__icon--voice"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.25 15V13.1953C6.13495 13.0344 5.09411 12.5179 4.28809 11.7119C3.30352 10.7273 2.75 9.39239 2.75 8C2.75 7.58579 3.08579 7.25 3.5 7.25C3.91421 7.25 4.25 7.58579 4.25 8C4.25 8.99456 4.64537 9.94811 5.34863 10.6514C6.05189 11.3546 7.00544 11.75 8 11.75C8.99456 11.75 9.94811 11.3546 10.6514 10.6514C11.3546 9.9481 11.75 8.99456 11.75 8C11.75 7.58579 12.0858 7.25 12.5 7.25C12.9142 7.25 13.25 7.58579 13.25 8C13.25 9.39239 12.6965 10.7273 11.7119 11.7119C10.9059 12.5179 9.86505 13.0344 8.75 13.1953V15C8.75 15.4142 8.41421 15.75 8 15.75C7.58579 15.75 7.25 15.4142 7.25 15ZM9.75 4C9.75 3.0335 8.9665 2.25 8 2.25C7.0335 2.25 6.25 3.0335 6.25 4V8C6.25 8.9665 7.0335 9.75 8 9.75C8.9665 9.75 9.75 8.9665 9.75 8V4ZM11.25 8C11.25 9.79493 9.79493 11.25 8 11.25C6.20507 11.25 4.75 9.79493 4.75 8V4C4.75 2.20507 6.20507 0.75 8 0.75C9.79493 0.75 11.25 2.20507 11.25 4V8Z"
        />
      </svg>
      <div
        class="str-chat__recording-timer"
      >
        00:00
      </div>
      <div
        class="str-chat__waveform-box-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
        />
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--pause-fill"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.5 3V13C13.5 13.2652 13.3946 13.5196 13.2071 13.7071C13.0196 13.8946 12.7652 14 12.5 14H10C9.73478 14 9.48043 13.8946 9.29289 13.7071C9.10536 13.5196 9 13.2652 9 13V3C9 2.73478 9.10536 2.48043 9.29289 2.29289C9.48043 2.10536 9.73478 2 10 2H12.5C12.7652 2 13.0196 2.10536 13.2071 2.29289C13.3946 2.48043 13.5 2.73478 13.5 3ZM6 2H3.5C3.23478 2 2.98043 2.10536 2.79289 2.29289C2.60536 2.48043 2.5 2.73478 2.5 3V13C2.5 13.2652 2.60536 13.5196 2.79289 13.7071C2.98043 13.8946 3.23478 14 3.5 14H6C6.26522 14 6.51957 13.8946 6.70711 13.7071C6.89464 13.5196 7 13.2652 7 13V3C7 2.73478 6.89464 2.48043 6.70711 2.29289C6.51957 2.10536 6.26522 2 6 2Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording paused UI when paused 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.25 12.75H11.75V4.25H4.25V12.75ZM5.75 10.5V6.5C5.75 6.08579 6.08579 5.75 6.5 5.75C6.91421 5.75 7.25 6.08579 7.25 6.5V10.5C7.25 10.9142 6.91421 11.25 6.5 11.25C6.08579 11.25 5.75 10.9142 5.75 10.5ZM8.75 10.5V6.5C8.75 6.08579 9.08579 5.75 9.5 5.75C9.91421 5.75 10.25 6.08579 10.25 6.5V10.5C10.25 10.9142 9.91421 11.25 9.5 11.25C9.08579 11.25 8.75 10.9142 8.75 10.5ZM9.75 2.5C9.75 2.4337 9.72364 2.37013 9.67676 2.32324C9.62987 2.27636 9.5663 2.25 9.5 2.25H6.5C6.4337 2.25 6.37013 2.27636 6.32324 2.32324C6.27636 2.37013 6.25 2.4337 6.25 2.5V2.75H9.75V2.5ZM11.25 2.75H13.5C13.9142 2.75 14.25 3.08579 14.25 3.5C14.25 3.91421 13.9142 4.25 13.5 4.25H13.25V13C13.25 13.3315 13.1182 13.6494 12.8838 13.8838C12.6494 14.1182 12.3315 14.25 12 14.25H4C3.66848 14.25 3.35063 14.1182 3.11621 13.8838C2.88179 13.6494 2.75 13.3315 2.75 13V4.25H2.5C2.08579 4.25 1.75 3.91421 1.75 3.5C1.75 3.08579 2.08579 2.75 2.5 2.75H4.75V2.5C4.75 2.03587 4.93451 1.59088 5.2627 1.2627C5.59088 0.934507 6.03587 0.75 6.5 0.75H9.5C9.96413 0.75 10.4091 0.934507 10.7373 1.2627C11.0655 1.59088 11.25 2.03587 11.25 2.5V2.75Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 15V13.1953C6.13495 13.0344 5.09411 12.5179 4.28809 11.7119C3.30352 10.7273 2.75 9.39239 2.75 8C2.75 7.58579 3.08579 7.25 3.5 7.25C3.91421 7.25 4.25 7.58579 4.25 8C4.25 8.99456 4.64537 9.94811 5.34863 10.6514C6.05189 11.3546 7.00544 11.75 8 11.75C8.99456 11.75 9.94811 11.3546 10.6514 10.6514C11.3546 9.9481 11.75 8.99456 11.75 8C11.75 7.58579 12.0858 7.25 12.5 7.25C12.9142 7.25 13.25 7.58579 13.25 8C13.25 9.39239 12.6965 10.7273 11.7119 11.7119C10.9059 12.5179 9.86505 13.0344 8.75 13.1953V15C8.75 15.4142 8.41421 15.75 8 15.75C7.58579 15.75 7.25 15.4142 7.25 15ZM9.75 4C9.75 3.0335 8.9665 2.25 8 2.25C7.0335 2.25 6.25 3.0335 6.25 4V8C6.25 8.9665 7.0335 9.75 8 9.75C8.9665 9.75 9.75 8.9665 9.75 8V4ZM11.25 8C11.25 9.79493 9.79493 11.25 8 11.25C6.20507 11.25 4.75 9.79493 4.75 8V4C4.75 2.20507 6.20507 0.75 8 0.75C9.79493 0.75 11.25 2.20507 11.25 4V8Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording stopped UI when stopped without recording preview 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.25 12.75H11.75V4.25H4.25V12.75ZM5.75 10.5V6.5C5.75 6.08579 6.08579 5.75 6.5 5.75C6.91421 5.75 7.25 6.08579 7.25 6.5V10.5C7.25 10.9142 6.91421 11.25 6.5 11.25C6.08579 11.25 5.75 10.9142 5.75 10.5ZM8.75 10.5V6.5C8.75 6.08579 9.08579 5.75 9.5 5.75C9.91421 5.75 10.25 6.08579 10.25 6.5V10.5C10.25 10.9142 9.91421 11.25 9.5 11.25C9.08579 11.25 8.75 10.9142 8.75 10.5ZM9.75 2.5C9.75 2.4337 9.72364 2.37013 9.67676 2.32324C9.62987 2.27636 9.5663 2.25 9.5 2.25H6.5C6.4337 2.25 6.37013 2.27636 6.32324 2.32324C6.27636 2.37013 6.25 2.4337 6.25 2.5V2.75H9.75V2.5ZM11.25 2.75H13.5C13.9142 2.75 14.25 3.08579 14.25 3.5C14.25 3.91421 13.9142 4.25 13.5 4.25H13.25V13C13.25 13.3315 13.1182 13.6494 12.8838 13.8838C12.6494 14.1182 12.3315 14.25 12 14.25H4C3.66848 14.25 3.35063 14.1182 3.11621 13.8838C2.88179 13.6494 2.75 13.3315 2.75 13V4.25H2.5C2.08579 4.25 1.75 3.91421 1.75 3.5C1.75 3.08579 2.08579 2.75 2.5 2.75H4.75V2.5C4.75 2.03587 4.93451 1.59088 5.2627 1.2627C5.59088 0.934507 6.03587 0.75 6.5 0.75H9.5C9.96413 0.75 10.4091 0.934507 10.7373 1.2627C11.0655 1.59088 11.25 2.03587 11.25 2.5V2.75Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 15V13.1953C6.13495 13.0344 5.09411 12.5179 4.28809 11.7119C3.30352 10.7273 2.75 9.39239 2.75 8C2.75 7.58579 3.08579 7.25 3.5 7.25C3.91421 7.25 4.25 7.58579 4.25 8C4.25 8.99456 4.64537 9.94811 5.34863 10.6514C6.05189 11.3546 7.00544 11.75 8 11.75C8.99456 11.75 9.94811 11.3546 10.6514 10.6514C11.3546 9.9481 11.75 8.99456 11.75 8C11.75 7.58579 12.0858 7.25 12.5 7.25C12.9142 7.25 13.25 7.58579 13.25 8C13.25 9.39239 12.6965 10.7273 11.7119 11.7119C10.9059 12.5179 9.86505 13.0344 8.75 13.1953V15C8.75 15.4142 8.41421 15.75 8 15.75C7.58579 15.75 7.25 15.4142 7.25 15ZM9.75 4C9.75 3.0335 8.9665 2.25 8 2.25C7.0335 2.25 6.25 3.0335 6.25 4V8C6.25 8.9665 7.0335 9.75 8 9.75C8.9665 9.75 9.75 8.9665 9.75 8V4ZM11.25 8C11.25 9.79493 9.79493 11.25 8 11.25C6.20507 11.25 4.75 9.79493 4.75 8V4C4.75 2.20507 6.20507 0.75 8 0.75C9.79493 0.75 11.25 2.20507 11.25 4V8Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder > renders audio recording stopped UI with recording preview 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-playback"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-playback-button"
        data-testid="audio-recording-preview-toggle-play-btn"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--play-fill"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 8C15.0004 8.16977 14.9569 8.33675 14.8736 8.48471C14.7904 8.63267 14.6703 8.75658 14.525 8.84437L5.52 14.3531C5.36818 14.4461 5.19429 14.4968 5.0163 14.5001C4.83831 14.5034 4.66266 14.4592 4.5075 14.3719C4.35382 14.2859 4.2258 14.1606 4.1366 14.0088C4.04741 13.857 4.00026 13.6842 4 13.5081V2.49187C4.00026 2.3158 4.04741 2.14298 4.1366 1.99117C4.2258 1.83936 4.35382 1.71405 4.5075 1.62812C4.66266 1.54084 4.83831 1.49656 5.0163 1.49986C5.19429 1.50315 5.36818 1.55391 5.52 1.64687L14.525 7.15562C14.6703 7.24342 14.7904 7.36732 14.8736 7.51529C14.9569 7.66325 15.0004 7.83023 15 8Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="str-chat__duration-display str-chat__recording-timer"
      >
        <span
          class="str-chat__duration-display__duration"
        >
          00:44
        </span>
      </div>
      <div
        class="str-chat__wave-progress-bar__track-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
          data-testid="wave-progress-bar-track"
          role="progressbar"
          style="--str-chat__voice-recording-amplitude-bar-gap-width: 1px;"
        >
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 31.399506330490112%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 24.018539488315582%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.365363776683807%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 59.02017951011658%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 26.63217782974243%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.37155795097351%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 82.78987407684326%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 15.16059935092926%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 47.57987558841705%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.29274868965149%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 55.40405511856079%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 85.32787561416626%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 57.56412744522095%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 83.30334424972534%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 75.42996406555176%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 46.48399353027344%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.82987952232361%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.917882204055786%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 71.56173586845398%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 7.107513397932053%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.29901123046875%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.445610344409943%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 95.34039497375488%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 48.61070513725281%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.09651231765747%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 8.803673088550568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 49.2523193359375%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 3.940269351005554%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.68490314483643%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.697471916675568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.977691546082497%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 5.717025697231293%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.073379561305046%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.73514586687088%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 94.67474222183228%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 54.55475449562073%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.71653747558594%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 61.83612942695618%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.5593957901001%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 89.80446457862854%;"
          />
          <div
            class="str-chat__wave-progress-bar__progress-indicator"
            data-testid="wave-progress-bar-progress-indicator"
            style="left: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--delete"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.25 12.75H11.75V4.25H4.25V12.75ZM5.75 10.5V6.5C5.75 6.08579 6.08579 5.75 6.5 5.75C6.91421 5.75 7.25 6.08579 7.25 6.5V10.5C7.25 10.9142 6.91421 11.25 6.5 11.25C6.08579 11.25 5.75 10.9142 5.75 10.5ZM8.75 10.5V6.5C8.75 6.08579 9.08579 5.75 9.5 5.75C9.91421 5.75 10.25 6.08579 10.25 6.5V10.5C10.25 10.9142 9.91421 11.25 9.5 11.25C9.08579 11.25 8.75 10.9142 8.75 10.5ZM9.75 2.5C9.75 2.4337 9.72364 2.37013 9.67676 2.32324C9.62987 2.27636 9.5663 2.25 9.5 2.25H6.5C6.4337 2.25 6.37013 2.27636 6.32324 2.32324C6.27636 2.37013 6.25 2.4337 6.25 2.5V2.75H9.75V2.5ZM11.25 2.75H13.5C13.9142 2.75 14.25 3.08579 14.25 3.5C14.25 3.91421 13.9142 4.25 13.5 4.25H13.25V13C13.25 13.3315 13.1182 13.6494 12.8838 13.8838C12.6494 14.1182 12.3315 14.25 12 14.25H4C3.66848 14.25 3.35063 14.1182 3.11621 13.8838C2.88179 13.6494 2.75 13.3315 2.75 13V4.25H2.5C2.08579 4.25 1.75 3.91421 1.75 3.5C1.75 3.08579 2.08579 2.75 2.5 2.75H4.75V2.5C4.75 2.03587 4.93451 1.59088 5.2627 1.2627C5.59088 0.934507 6.03587 0.75 6.5 0.75H9.5C9.96413 0.75 10.4091 0.934507 10.7373 1.2627C11.0655 1.59088 11.25 2.03587 11.25 2.5V2.75Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--voice"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.25 15V13.1953C6.13495 13.0344 5.09411 12.5179 4.28809 11.7119C3.30352 10.7273 2.75 9.39239 2.75 8C2.75 7.58579 3.08579 7.25 3.5 7.25C3.91421 7.25 4.25 7.58579 4.25 8C4.25 8.99456 4.64537 9.94811 5.34863 10.6514C6.05189 11.3546 7.00544 11.75 8 11.75C8.99456 11.75 9.94811 11.3546 10.6514 10.6514C11.3546 9.9481 11.75 8.99456 11.75 8C11.75 7.58579 12.0858 7.25 12.5 7.25C12.9142 7.25 13.25 7.58579 13.25 8C13.25 9.39239 12.6965 10.7273 11.7119 11.7119C10.9059 12.5179 9.86505 13.0344 8.75 13.1953V15C8.75 15.4142 8.41421 15.75 8 15.75C7.58579 15.75 7.25 15.4142 7.25 15ZM9.75 4C9.75 3.0335 8.9665 2.25 8 2.25C7.0335 2.25 6.25 3.0335 6.25 4V8C6.25 8.9665 7.0335 9.75 8 9.75C8.9665 9.75 9.75 8.9665 9.75 8V4ZM11.25 8C11.25 9.79493 9.79493 11.25 8 11.25C6.20507 11.25 4.75 9.79493 4.75 8V4C4.75 2.20507 6.20507 0.75 8 0.75C9.79493 0.75 11.25 2.20507 11.25 4V8Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
